<resources>
<<<<<<< HEAD
    <string name="app_name">sync</string>
=======
    <string name="app_name">gallery_sync</string>
>>>>>>> 68cd230654625a7bfe4f3923229c9c5188cc6e5f
    <string name="text_value">SongName</string>
    <string-array name="song_list">
        <item>payPhone</item>
        <item>leave Out ALl Rest</item>
        <item>one More Light</item>
        <item>Breaking The Habit</item>
        <item>GodDamn</item>
    </string-array>
    <string name="next_song">NextSong</string>
    <string name="list_label">Click Button To See The Songs</string>
    <string name="hintB">Click on Song Title To Check Info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_1">Fragment 1</string>
    <string name="frag_2">Fragment 2</string>
    <string name="frag1_info">Welcome To Fragment 1</string>
    <string name="chats_icon">Chats</string>
    <string name="frag2_info">Welcome To Fragment 2</string>
    <string name="home_icon">Home</string>
    <string name="setting_icon">Settings</string>
    <string name="chatInfo">ChatInfo</string>
    <string name="settingInfo">Setting</string>
    <string name="HomeInfo">HomeScreen</string>
    <string name="d1">Save Contact</string>
    <string name="d2">Dialog 2</string>
    <string name="d3">Dialog 3</string>
    <string name="contactHint">Enter Contact Name</string>
    <string name="SaveContact">Do You Want To Save Contact</string>
    <string name="pos">Yes </string>
    <string name="neg">No </string>
    <string name="gallery_">Gallery</string>
    <string name="ble">BLE Device</string>
    <string name="loginHeading">Login</string>
    <string name="nameCred">Enter Your Name</string>
    <string name="passCred">Enter Your Password</string>
    <string name="webSockets">WebSocket</string>
    <string name="log_in">Login</string>
    <string name="add">Add</string>
    <string name="edit_img">Enter Image Name</string>
    <string name="gal_">Gallery</string>
    <string name="email">Enter Your Gmail</string>
    <string name="logo">Logo</string>
    <string name="main_screen_header">Main Screen</string>
    <string name="FcmButton">Notification</string>
    <string name="userName">Username</string>
    <string name="Email">Email</string>
    <string name="logOut">Logout</string>
    <string name="openGallery">Open Gallery</string>
    <string name="nameLoading">Name Loading ....</string>
    <string name="emailLoading">Email Loading ....</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading....</string>
    <string name="edit">Edit</string>
    <string name="signIn">Signin</string>
    <string name="logInHeadLine">Already A User ?</string>
    <string name="signInHeadLine">New User ?</string>
    <string name="connected">Connected</string>
    <string name="voltage">Voltage (V)</string>
    <string name="vValue">-</string>
    <string name="current">Current (I)</string>
    <string name="actPower">Active Power (P)</string>
    <string name="apparPower">Apparent Power (S)</string>
    <string name="Rp">Reactive Power (Q)</string>
    <string name="enHead">Event Type</string>
    <string name="dsHead">Device State</string>
    <string name="etHead">Event Type</string>
    <string name="lpHead">Last Update</string>
    <string name="sub">Subscribe</string>
    <string name="mqqt">MQTT</string>
    <string name="scanner">Scan Devices</string>
    <string name="deviceName">DeviceName</string>
    <string name="macAdd">Mac Address</string>
    <string name="rssi">RSSI</string>
    <string name="none">Not Found</string>
    <string name="uploading_please_wait">Uploading, please wait...</string>
    <string name="Data">Data</string>
    <string name="info">Info</string>
    <string name="BleDevice">BleDevice</string>
    <string name="notCon">Not Connected</string>
    <string name="devStatus">Device Status</string>
    <string name="charUUid">Characteristic UUID</string>
    <string name="serUUID">Service UUID</string>
    <string name="bondState">Bond State</string>
    <string name="noImagesIcon">No Images Available</string>
    <string name="wait">Wait Until It Loads</string>
    <string name="connecting_message">Connecting to device, please wait...</string>
    <string name="connection_failed">Connection failed. Please try again.</string>
    <string name="freq">Frequency (F)</string>
    <string name="pt">PT</string>
    <string name="st">ST</string>
    <string name="qt">QT</string>
    <string name="title">Title</string>
    <string name="eventType">Event Type</string>
    <string name="eventId">Event Id</string>
    <string name="timestamp">Time Stamp</string>
    <string name="source">Source</string>
    <string name="message">Message</string>

</resources>