<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crisp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonProfileImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:contentDescription="@string/home_icon"
            android:focusable="true"
            app:cardCornerRadius="60dp"
            app:cardElevation="4dp"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/signInUserLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/blaze" />
        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/signIn"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signInUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/outlinetextborders"
            android:gravity="center_horizontal"
            android:hint="@string/nameCred"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/singInUserGmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/outlinetextborders"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signInUserPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:background="@drawable/outlinetextborders"
            android:gravity="center_horizontal"
            android:hint="@string/passCred"

            android:inputType="textPassword"
            android:padding="12dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/main_container_border"
            android:backgroundTint="@android:color/black"
            android:backgroundTintMode="screen"
            android:text="@string/signIn"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
       app:layout_constraintTop_toBottomOf="@+id/llSign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logInHeadLine"
            android:focusable="true"
            android:textSize="16sp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:id="@+id/sigInLog"
            android:layout_marginStart="8dp"



            />
    </androidx.appcompat.widget.LinearLayoutCompat>






</androidx.constraintlayout.widget.ConstraintLayout>