<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300.dp"
    android:layout_height="200.dp"
    android:layout_gravity="center">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/SaveContact"
        android:layout_margin="30.dp"
        android:id="@+id/titleDi"
        android:textSize="19.sp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleDi"
        app:layout_constraintBottom_toTopOf="@+id/linearLay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/userName"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDi"
        android:padding="10.dp"
        android:id="@+id/linearLay"
        >


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_weight="1"
            android:text="@string/pos"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/neg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end|center_horizontal"
            android:gravity="center"
            android:text="@string/neg"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>